--- a/challenge/clock2/clock2.html
+++ b/challenge/clock2/clock2.html
@@ -7,16 +7,8 @@
     <title>Document</title>
   </head>
   <body>
-    <div>
-      <form>
-        비번 <input type="password" required />
-        <input type="submit" />
-      </form>
-    </div>
+    <h2 id="clock2"></h2>
 
-    <form>
-      아이디: <input type="text" name="usrname" required />
-      <input type="submit" />
-    </form>
+    <script src="./clock2.js"></script>
   </body>
 </html>
