--- a/settings.html
+++ b/settings.html
@@ -8,14 +8,14 @@
     <title>settings - ririsi Talk</title>
   </head>
 
-  <body>
+  <body background="img/bg.jpeg">
     <div class="status-bar">
       <div class="stayus-bar__column">
-        <span>No Service</span>
+        <span>KR</span>
         <i class="fa-solid fa-wifi"></i>
       </div>
       <div class="stayus-bar__column">
-        <span>18:32</span>
+        <span id="clockjs">00:00:00</span>
       </div>
       <div class="stayus-bar__column">
         <span>110%</span>
@@ -96,6 +96,7 @@
       <span>Your screen is too big</span>
     </div>
 
+    <script src="./clockjs.js"></script>
     <script
       src="https://kit.fontawesome.com/222ab3ff8d.js"
       crossorigin="anonymous"
