--- a/friends.html
+++ b/friends.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Open+Sans:wght@400;600&display=swap"
+    rel="stylesheet"
+  />
   <head>
     <link rel="stylesheet" href="css/style.css" />
     <meta charset="UTF-8" />
@@ -8,17 +12,17 @@
     <title>Welcome to Kokoa Talk</title>
   </head>
 
-  <body>
+  <body background="img/bg.jpeg">
     <div class="status-bar">
       <div class="stayus-bar__column">
-        <span>No Service</span>
+        <span>KR</span>
         <i class="fa-solid fa-wifi"></i>
       </div>
       <div class="stayus-bar__column">
-        <span>18:32</span>
+        <span id="clockjs">00:00:00</span>
       </div>
       <div class="stayus-bar__column">
-        <span>110%</span>
+        <span>100%</span>
         <i class="fa-solid fa-battery-full fa-lg"></i>
         <!-- "lg"는 아이콘 사이즈를 키울때 쓰는 명령어이다. -->
         <i class="fa-solid fa-bolt"></i>
@@ -26,7 +30,7 @@
     </div>
 
     <header class="screen-header">
-      <h1 class="screen-header__title">friends</h1>
+      <h1 class="screen-header__title">Friends</h1>
       <div class="screen-header__icon">
         <span><i class="fas fa-search fa-2x"></i></span>
         <span><i class="fa-solid fa-music fa-2x"></i></span>
@@ -43,11 +47,11 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="./img/1-1.jpeg"
+            src="./img/55.jpeg"
             class="user-component__avatar user-component__avatar--xl"
           />
           <div class="user-component__text">
-            <h4 class="user-component__title">ririsi</h4>
+            <h4 class="user-component__title">@i.ririsi</h4>
             <!-- <h6 class="user-component__subtitle">this text whatever</h6> -->
           </div>
         </div>
@@ -61,7 +65,7 @@
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="./img/55.jpeg"
+              src="./img/channel.jpeg"
               class="user-component__avatar user-component__avatar--sm"
             />
             <div class="user-component__text">
@@ -74,6 +78,105 @@
             <div>
               <span>2</span> <i class="fa-solid fa-chevron-right fa-xs"></i>
             </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="friends-screen__friends-list">
+        <div class="friends-screen__channel-header">
+          <span>Friends</span>
+          <i class="fa-solid fa-chevron-up fa-xs"></i>
+        </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="./img/1-1.jpeg"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                @minji
+              </h4>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <div></div>
+          </div>
+        </div>
+      </div>
+
+      <div class="friends-screen__friends-list">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="./img/2.jpeg"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                @Hanni
+              </h4>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <div></div>
+          </div>
+        </div>
+      </div>
+
+      <div class="friends-screen__friends-list">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="./img/3.jpeg"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                @Haerin
+              </h4>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <div></div>
+          </div>
+        </div>
+      </div>
+
+      <div class="friends-screen__friends-list">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="./img/4.jpeg"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                @Hyein
+              </h4>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <div></div>
+          </div>
+        </div>
+      </div>
+
+      <div class="friends-screen__friends-list">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="./img/5.jpeg"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                @Danielle
+              </h4>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <div></div>
           </div>
         </div>
       </div>
@@ -108,13 +211,16 @@
       </ul>
     </nav>
     <div id="splash-screen">
-      <i class="fa-solid fa-comment"></i>
+      <span class="front">RIRISI Talk</span>
+      <!-- <i class="fa-solid fa-comment"></i> -->
     </div>
 
     <div id="no-mobile">
-      <span>Your screen is too big</span>
+      <span>Your screen is too big 👀</span>
     </div>
 
+    <script src="./clockjs.js"></script>
+    <!--! 외부 사이트에서 가져오는 script가 있을때는 내부 script를 위에 둬야 오류없이 작동함! -->
     <script
       src="https://kit.fontawesome.com/222ab3ff8d.js"
       crossorigin="anonymous"
