--- a/more.html
+++ b/more.html
@@ -8,17 +8,17 @@
     <title>More - ririsi Talk</title>
   </head>
 
-  <body> 
+  <body background="img/bg.jpeg">
     <div class="status-bar">
       <div class="stayus-bar__column">
-        <span>No Service</span>
+        <span>KR</span>
         <i class="fa-solid fa-wifi"></i>
       </div>
       <div class="stayus-bar__column">
-        <span>18:32</span>
+        <span id="clockjs">00:00:00</span>
       </div>
       <div class="stayus-bar__column">
-        <span>110%</span>
+        <span>100%</span>
         <i class="fa-solid fa-battery-full fa-lg"></i>
         <!-- "lg"는 아이콘 사이즈를 키울때 쓰는 명령어이다. -->
         <i class="fa-solid fa-bolt"></i>
@@ -30,7 +30,9 @@
       <div class="screen-header__icon">
         <span><i class="fas fa-search fa-2x"></i></span>
         <span><i class="fa-solid fa-music fa-2x"></i></span>
-        <span><a href="settings.html"><i class="fa-solid fa-gear fa-2x"></i></a></span>
+        <span
+          ><a href="settings.html"><i class="fa-solid fa-gear fa-2x"></i></a
+        ></span>
       </div>
     </header>
 
@@ -70,9 +72,8 @@
           <i class="fas fa-file-invoice-dollar"></i>
           <span>Account</span>
         </div>
-       
-        </div>
       </div>
+
       <div class="more-suggestions">
         <h4 class="more-suggestions__title">Suggestions</h4>
         <div class="more-suggestions__icons">
@@ -127,11 +128,11 @@
       </ul>
     </nav>
 
-
     <div id="no-mobile">
       <span>Your screen is too big</span>
     </div>
 
+    <script src="./clockjs.js"></script>
     <script
       src="https://kit.fontawesome.com/222ab3ff8d.js"
       crossorigin="anonymous"
